#
# File name:  Makefile.am
# Date:       2014/10/18 15:03
# Subversion: $Id: $
# Author:     Milan Dunghubel <milan@mfis.cz>
#
# Copyright (C) 2010 Milan Dunghubel <milan@mfis.cz>
#

include_HEADERS         = info_rad.h

lib_LTLIBRARIES         = libinfo_rad.la
libinfo_rad_la_SOURCES     = info_rad.c
libinfo_rad_la_LDFLAGS     = -no-undefined -version-info 0:0:0
#libinfo_rad_la_LIBADD      = replace/libreplace.la lib/library.la
